api-resources/default/ff0d0d2f-c951-4922-82b2-2ad37c41e03b/1/default_ff0d0d2f-c951-4922-82b2-2ad37c41e03b_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
  namespace: petstore
spec:
  hostnames:
  - api-controller.apicurio.integration-qe.com
  parentRefs:
  - name: istio-ingressgateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /v1/cat
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /v1/dog
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /v1/dog
